--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,6 @@
-# fly.toml file generated for flask-stock on 2023-03-25T18:22:02-04:00
+# fly.toml file generated for flask-stock-2 on 2023-03-25T19:19:42-04:00
 
-app = "flask-stock"
+app = "flask-stock-2"
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
